--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.27",
     "framer-motion": "^10.16.5",
     "gsap": "^3.12.2",
     "next": "14.0.3",
