--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@vercel/analytics": "^1.1.1",
     "framer-motion": "^10.16.5",
     "gsap": "^3.12.2",
+    "locomotive-scroll": "^5.0.0-beta.10",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-scroll": "^1.9.0",
     "sass": "^1.69.5"
   },
   "devDependencies": {
