--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.27",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.2",
     "framer-motion": "^10.16.5",
     "gsap": "^3.12.2",
     "locomotive-scroll": "^5.0.0-beta.10",
